# Area-Occupancy-Detection

./: .cursorignore  .cursorrules  .devcontainer.json  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .repomixignore  .ruff.toml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COORDINATOR_REFACTORING.md  COVERAGE_IMPROVEMENT_SUMMARY.md  Example_Slots.json  LICENSE  PROJECT_STATUS_REPORT.md  README.md  STATE_REFACTOR.md  TEST_COVERAGE_SUMMARY.md  db_corruption_log.txt  ha-room-occupancy-code.md  hacs.json  index.html  main.py  mypy.ini  precommit-config.yaml  pyproject.toml  pytest.ini  release_diff.txt  repomix.config.json  requirements-dev.txt  requirements.dev.txt  requirements.txt  requirements_test.txt  setup.py  sitemap.xml  test_fixes_summary.md  testing-guide.md
.claude/: settings.local.json
.cursor/: environment.json
.cursor/rules/: advanced_features.mdc  area-occupancy-detection.mdc  area_occupancy_integration.mdc  assumptions.mdc  bayesian_calculations.mdc  code-quality-rules.mdc  custom-component.mdc  development-workflows.mdc  development_workflow.mdc  documentation.mdc  environment.mdc  environmental_sensors.mdc  linting.mdc  machine_learning.mdc  project-brief.mdc  scope.mdc  testing.mdc  testing_requirements.mdc
.devcontainer/: configuration.yaml  devcontainer.env  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug.yml:Zone.Identifier  bug_report.md  config.yml  feature_request.yml  new_feature.md
.github/instructions/: advanced_features.instructions.md  bayesian_calculations.instructions.md  custom-component.instructions.md  development_workflow.instructions.md  environmental_sensors.instructions.md  machine_learning.instructions.md  project-brief.instructions.md  testing_requirements.instructions.md
.github/workflows/: ci.yml  docs.yml  downloads.yml  hassfest.yaml  lint.yaml  lint.yml  test.yaml  test.yml  tests.yaml  validate.yml
assets/simulator/: app.js
blueprints/: README.md  smart_lighting.yaml
config/: configuration.yaml  home_assistant_backup_emergency_kit_08_11_2025_16_10.txt
config/.storage/: core.area_registry  core.config_entries  core.device_registry  core.entity_registry  core.floor_registry
custom_components/: __init__.py
custom_components/area_occupancy/: __init__.py  base.py  binary_sensor.py  calculate_prior.py  calculate_prob.py  calculations.py  conditional_probability.py  config_flow.py  config_management.py  configuration_manager.py  const.py  coordinator.py  db.py  decay_handler.py  decay_manager.py  default_probabilities.yaml  diagnostics.py  environmental_analysis.py  environmental_detection.py  environmental_storage.py  exceptions.py  helpers.py  historical_analysis.py  manifest.json  migrations.py  ml_data_collector.py  ml_feature_engineering.py  ml_hybrid.py  ml_models.py  ml_utils.py  number.py  pattern_analysis.py  pattern_analyzer.py  prior_manager.py  prior_sensors.py  probabilities.py  schema.py  sensor.py  service.py  services.yaml  (+10 more)
custom_components/room_occupancy/: __init__.py  base.py  binary_sensor.py  calculations.py  config_flow.py  const.py  coordinator.py  init.py  manifest.json  probability.py  sensor.py  strings.json
docs/: DATABASE_LOCKING_SOLUTION.md  MIGRATION.md  area_occupancy.ipynb  database-schema.md  development-environment.md  mkdocs.yml  pyproject.toml  requirements.txt  room_occupancy_app.py
docs/docs/: index.md
docs/docs/assets/simulator/: app.js  style.css
docs/docs/development/: architecture.md
docs/docs/features/: activity-detection.md  adjacent-areas.md  calculation.md  decay.md  entities.md  environmental-sensors.md  historical-analysis.md  likelihood.md  numeric-correlation.md  overview.md  prior-learning.md  probability-calculation.md  purpose.md  sensor-correlation.md  sensor-health.md  sensor-types.md  sensors.md  services.md  sleep-presence.md  time-based-priors.md  time-decay.md  wasp-in-box.md  wasp-logic.md
docs/docs/getting-started/: basic-usage.md  configuration.md  installation.md  lovelace-card.md  why.md
docs/docs/simulator/: index.md  simulator.html
docs/docs/technical/: analysis-chain.md  bayesian-calculation.md  calculation-flow.md  data-flow.md  database-schema.md  debug.md  deep-dive.md  diagnostics.md  entity-evidence.md  global-prior-flow.md  ha-config-flow-ui-reference.md  likelihood-calculation.md  prerelease.md  prior-calculation.md  time-prior-flow.md  transition-learning.md
features/activity-detection/: index.html
features/adjacent-areas/: index.html
features/calculation/: index.html
features/decay/: index.html
features/entities/: index.html
features/historical-analysis/: index.html
plans/: virtual_sensors.md
scripts/: bootstrap  bootstrap.sh  develop  motd  notes  run_tests.py  setup  setup_old  test  test-ci-local  validate-env  visualize_distributions.md  visualize_distributions.py
search/: search_index.json
simulator/: .env  Dockerfile  README.md  __init__.py  app.py  compare_calculation.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt
simulator/static/css/: style.css
simulator/static/js/: app.js
simulator/templates/: index.html
tests/: README_CENTRALIZED_MOCKS.md  __init__.py  conftest.py  test_activity.py  test_all_areas.py  test_analysis_helpers.py  test_area.py  test_area_all_areas.py  test_area_area.py  test_binary_sensor.py  test_calculate_prior.py  test_calculate_prob.py  test_config_flow.py  test_const.py  test_continuous_likelihood.py  test_coordinator.py  test_coordinator_adjacency.py  test_data_adjacency.py  test_data_analysis.py  test_data_config.py  test_data_decay.py  test_data_entity.py  test_data_entity_type.py  test_data_health.py  test_data_likelihood.py  test_data_metrics.py  test_data_online_prior.py  test_data_prior.py  test_data_purpose.py  test_data_trajectory.py  test_db.py  test_db_aggregation.py  test_db_constants.py  test_db_core.py  test_db_correlation.py  test_db_correlation_binary_likelihoods.py  test_db_maintenance.py  test_db_operations.py  test_db_queries.py  test_db_relationships.py  (+30 more)
(+145 files in other folders)
