[project]
name = "area-occupancy-docs"
version = "0.1.0"
requires-python = ">=3.13"
description = "Documentation for Area Occupancy Detection"
dependencies = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocs-minify-plugin>=0.8.0,<1.0.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
    # Pygments 2.20 dropped tolerance for filename=None in HtmlFormatter;
    # pymdown-extensions 10.21.2 adds the compatibility fix. Pinned as a
    # direct dep so the lock cannot regress below that version even though
    # it is otherwise transitive via mkdocs-material.
    "pymdown-extensions>=10.21.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["__init__.py"]
