[project]
name = "area-occupancy-simulator"
version = "0.1.0"
requires-python = ">=3.14.2"
description = "Flask-based simulator for Area Occupancy Detection"
dependencies = [
    "Flask>=3.0.0",
    "Flask-Cors>=4.0",
    "homeassistant>=2026.7.1",
    "numpy>=2.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py", "__init__.py"]
